# assembler-interpreter

./: CMakeLists.txt  README.md  assembler.cpp  input.txt  input1.txt  input4.txt  input5.txt  interpreter.cpp  log.xml  main.cpp  result.xml  test_main.cpp
